[refs #22] Dodany link do FB na gorze strony

--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -49,6 +49,16 @@ body {
 	background-size: contain;
 }
 
+.toplinks {
+	float: right;
+	margin: 0;
+	padding: 10px;
+	list-style: none;
+}
+	.toplinks img {
+		width: 20px;
+	}
+
 .hero {
 
 	h2 {
@@ -236,8 +246,8 @@ h2 {
 		margin-top: -34px;
 	}
 	.brand {
-		width: 100%;
-		max-width: 100%;
+		width: 75%;
+		max-width: 75%;
 		height: 36px;
 		float: left;
 		padding: 4px;
