--- a/sgallery/templates/renata-kowalczuk.eu/album.html
+++ b/sgallery/templates/renata-kowalczuk.eu/album.html
@@ -1,6 +1,15 @@
 <div class="topbar">
 	<div class="container">
-		<h1 class="brand"><a href="/" title="Studio Projektowe Renata Kowalczuk" /></h1>
+		<h1 class="brand">
+			<a href="/" title="Studio Projektowe Renata Kowalczuk" />
+		</h1>
+		<ul class="toplinks">
+			<li>
+				<a href="https://www.facebook.com/studio.projektowe.renata.moskwa" target="_blank" rel="nofollow" title="Facebook">
+					<img src="/images/icons/f.png">
+				</a>
+			</li>
+		</ul>
 	</div>
 </div>
 <div class="topbar--navigation">
