--- a/site/contact.page
+++ b/site/contact.page
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <component name="page" template="production">
 	<data>
-		<title>Projektowanie Wnętrz - Renata Kowalczuk</title>
-		<keywords>Projektowanie Wnętrz, Wrocław, Renata Kowalczuk</keywords>
+		<title>Projektowanie Wnętrz - Renata Moskwa</title>
+		<keywords>Projektowanie Wnętrz, Wrocław, Renata Kowalczuk, Renata Moskwa</keywords>
 		<description></description>
 	</data>
 
@@ -23,7 +23,7 @@
 				<markdown><![CDATA[
 ## Projektowanie Wnętrz - Wrocław
 
-mgr inż. arch. Renata Kowalczuk<br />
+mgr inż. arch. Renata Moskwa (Kowalczuk)<br />
 telefon: **+48 512 149 366**<br />
 email: <a href="mailto:info@renata-kowalczuk.eu">info@renata-kowalczuk.eu</a><br />
 adres: ul. Rymarska 47/23, 53-206 Wrocław
