Zdjecia Walecznych, kontakt FB

--- a/site/contact.page
+++ b/site/contact.page
@@ -26,7 +26,9 @@
 mgr inż. arch. Renata Moskwa (Kowalczuk)<br />
 telefon: **+48 512 149 366**<br />
 email: <a href="mailto:info@renata-kowalczuk.eu">info@renata-kowalczuk.eu</a><br />
-adres: ul. Rymarska 47/23, 53-206 Wrocław
+adres: ul. Rymarska 47/23, 53-206 Wrocław<br />
+<br />
+Zapraszam do odwiedzenia strony na Facebooku - <a href="https://www.facebook.com/studio.projektowe.renata.moskwa" target="_blank">Studio Projektowe Renata Moskwa</a>
 				]]></markdown>
 			</data>
 		</component>
