--- a/site/index.page
+++ b/site/index.page
@@ -51,6 +51,17 @@ przedszkola. Ograniczeniem może być tylko grawitacja i kubatura pomieszczenia.
 			<data>
 				<size></size>
 				<markdown><![CDATA[
+## Facebook
+
+Po więcej aktualności zapraszam do odwiedzenia strony na Facebooku - <a href="https://www.facebook.com/studio.projektowe.renata.moskwa" target="_blank">Studio Projektowe Renata Moskwa</a>
+				]]></markdown>
+			</data>
+		</component>
+
+		<component name="content">
+			<data>
+				<size></size>
+				<markdown><![CDATA[
 ## Nowość! Projekty na odległość
 
 Istnieje możliwość opracowania projektu dla Inwestora bez konieczności przeprowadzania spotkań w biurze. Sytuacja taka
